# Whats_App_Web-Pyton-Lib

./: .gitignore  Architecture.md  README.md  Requirements.md  admin_server.py  bot.py  bridge.py  bridge_state.json  main.py  pyproject.toml  requirements.txt  sessions.json
tests/: test_ai_manager.py  test_command_processor.py  test_models.py  test_requirements_compliance.py  test_sessions.py
whatsapp_session/: DevToolsActivePort  Local State  Variations  first_party_sets.db
whatsapp_session/Default/: BrowsingTopicsState  DIPS  DIPS-wal  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data  passkey_enclave_state
whatsapp_session/Default/DawnGraphiteCache/: data_1  index
whatsapp_session/Default/DawnWebGPUCache/: data_1  index
whatsapp_session/Default/Extension Rules/: LOG
whatsapp_session/Default/Extension Scripts/: LOG
whatsapp_session/Default/Extension State/: LOG  LOG.old
whatsapp_session/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  index
whatsapp_session/GraphiteDawnCache/: data_1  index
whatsapp_session/ShaderCache/: data_0  data_1  data_2  index
whatsapp_session/component_crx_cache/: metadata.json
whatsapp_session/segmentation_platform/: ukm_db
whatsapp_web/: __init__.py  core.py  driver.py  models.py
(+451 files in other folders)
